--- a/app/assets/stylesheets/mdtran.css
+++ b/app/assets/stylesheets/mdtran.css
@@ -7,13 +7,14 @@ body {
     background: #FFFFFF;
     font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
     font-size: small;
-    text-align: center;
+    text-align: left;
 }
 
 #mainHeader {
   margin: 0 0 1em;
   padding-top: 1em;
   color: #808080;
+  text-align: center;
 }
 
 #mainHeader .logo{
