--- a/app/views/api/v1/tests/show.html.erb
+++ b/app/views/api/v1/tests/show.html.erb
@@ -1,17 +1,20 @@
-<span id="forkongithub">
-	<a href="https://github.com/adiwg/mdTranslator">Fork me on GitHub</a>
-</span>
+<!--
+# Alaska Data Integration working group - ADIwg
+
+# REST endpoint controller for description of api
+
+# History:
+# 	Stan Smith 2013-10-09 initial
+-->
 
 <h2 id="mainHeader">
 	<%= image_tag "logo150.png", alt: "mdTranslator", class: "logo" %>
-	<span>Demo</span>
-	<span class="version">Alpha</span>
+	<span>API</span>
+	<span class="version">Test V1</span>
 </h2>
 
 <div id="form_container">
-	<h1><a>Submit JSON</a></h1>
-
-	<%= form_tag("/api/v1", id: "submitJSON") do %>
+	<%= form_tag("/api/v1/translator", id: "submitJSON") do %>
 		<div class="form_description">
 			<h2>Submit JSON</h2>
 			<p>
@@ -100,18 +103,20 @@
 			<li id="li_1">
 				<label class="description" for="element_1">JSON</label>
 				<div>
-					<textarea id="element_1" name="file" class="element textarea large"><%= @jsonDemo %></textarea>
+					<textarea id="codeTextarea" name="file">
+						<%= @jsonDemo %>
+					</textarea>
 				</div>
 				<p class="guidelines" id="guide_1">
 					<small>Put your JSON here</small>
 				</p>
 			</li>
-
-			<li class="buttons">
-				<input type="hidden" name="form_id" value="759352"/>
-				<input id="saveForm" class="button_text" type="submit" name="submit" value="Submit"/>
-			</li>
 		</ul>
+
+		<div class="buttons">
+			<input type="hidden" name="form_id" value="759352"/>
+			<input id="saveForm" class="button_text" type="submit" name="submit" value="Submit"/>
+		</div>
 	<% end %>
 
 </div>
