- fixed css to prevent collapsing textarea on .../api/v1/tests

--- a/app/views/api/readers/show.html.erb
+++ b/app/views/api/readers/show.html.erb
@@ -18,6 +18,10 @@
 
 ## adiwgJson
 
+### Supported versions
+
+> 0.8.0
+
 ### Reader for ADIwg JSON metadata format
 
 The adiwgJson format is a simple JSON format for documenting and exchanging information
