--- a/app/views/api/v1/tests/show.html.erb
+++ b/app/views/api/v1/tests/show.html.erb
@@ -100,17 +100,16 @@
 				</p>
 			</li>
 
-			<li id="li_1">
+			<li id="li_8">
 				<label class="description" for="element_1">JSON</label>
 				<div>
-					<textarea id="codeTextarea" name="file">
-						<%= @jsonDemo %>
-					</textarea>
+					<textarea id="codeTextarea" name="file"><%= @jsonDemo %></textarea>
 				</div>
 				<p class="guidelines" id="guide_1">
 					<small>Put your JSON here</small>
 				</p>
 			</li>
+
 		</ul>
 
 		<div class="buttons">
