- added reference to .../api/v1/api as alternate link - changed routes 'test' to 'demo' and added reference to API - changed method of getting readme text from mdTranslator

--- a/app/views/api/v1/apis/show.html.erb
+++ b/app/views/api/v1/apis/show.html.erb
@@ -5,6 +5,8 @@
 
 # History:
 # 	Stan Smith 2014-10-09 initial
+#   Stan Smith 2014-10-11 added reference to api/v1/api as alternate link
+#   Stan Smith 2014-10-11 changed test resource to demo and added reference
 -->
 
 <h2 id="mainHeader">
@@ -20,6 +22,8 @@ doc = <<-MARKDOWN
 
  * __.../__ # returns the welcome page with information and links about the mdTranslator
  * __.../api/v1__ # returns documentation on the mdTranslator version 1 API
+ * __.../api/v1/api__ # returns documentation on the mdTranslator version 1 API (alternate link)
+ * __.../api/v1/demo__ # returns page to view and test mdTranslator options
  * __.../api/v1/options__ # returns a JSON object with all supported mdTranslator options; <br>
  intended for loading selection lists in automated tools; <br>
  supports callback option for JSONp
