Add github banner.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MdtranslatorRails</title>
+  <title>mdTranslator API</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -9,6 +9,6 @@
 <body>
 
 <%= yield %>
-
+<span id="forkongithub"><a href="https://github.com/adiwg/mdTranslator-rails">Fork me on GitHub</a></span>
 </body>
 </html>
