--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
 The ADIwg mdTranslator (or metadata translator) is an open-source software project for
 translation between metadata standards.  The user prepares metadata in one of the
 mdTranslator's supported 'reader' formats, POSTs the input to the mdTranslator, and
-receives output in one of the mdTranslator's support 'writer' formats.
+receives output in one of the mdTranslator's supported 'writer' formats.
 
 ## Links
 
@@ -49,8 +49,8 @@ in three parts:
  * __adiwgJson__ - a simple JSON format for scientific metadata that fully supports ISO 19115-2
  and FGDC metadata standards.
  * __mdTranslator__ - a public hosted web service for translation of adiwgJson to other metadata
- standards.  The mdTranslator is also available as a Ruby Gem 'adiwg-mdtranslator' or Ruby
- language code from the GitHub repository.
+ standards.  The mdTranslator is also available as a Ruby Gem 'adiwg-mdtranslator' or source
+ code from the GitHub repository.
  * __mdEditor__ - an online metadata editor for preparation and maintenance of scientific
  metadata in the adiwgJson format.
 
