- trap invalid endpoint .../api/v1/codelists and redirect to .../api/codelists  - return all information from mdTranslator in message object  - remove absolute paths from error messages

--- a/app/views/api/v1/demos/show.html.erb
+++ b/app/views/api/v1/demos/show.html.erb
@@ -5,6 +5,7 @@
 
 # History:
 # 	Stan Smith 2014-10-09 initial
+#   Stan Smith 2014-11-10 fixed problem with validation='strict'
 -->
 
 <h2 id="mainHeader">
@@ -67,7 +68,7 @@
 					<select class="element select medium" id="element_5" name="validate">
 						<option value="none">None</option>
 						<option value="normal" selected="selected">Normal</option>
-						<option value="normal">Strict</option>
+						<option value="strict">Strict</option>
 					</select>
 				</div>
 				<p class="guidelines" id="guide_2">
