Update API docs

--- a/app/views/api/writers/index.html.erb
+++ b/app/views/api/writers/index.html.erb
@@ -16,7 +16,7 @@
 <%
    doc = <<-MARKDOWN
 
-## List of available readers for mdTranslator
+## List of available writers for mdTranslator
 
  [iso19115_2](./writers/iso19115_2)
 
