--- a/app/assets/stylesheets/mdtran.css
+++ b/app/assets/stylesheets/mdtran.css
@@ -71,7 +71,7 @@ sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: b
 sup { top: -0.5em; }
 sub { bottom: -0.25em; }
 
-ul, ol { margin: 1em 0; padding: 0 0 0 2em; }
+ul, ol { margin: .25em 0; padding: 0 0 0 2em; }
 li p:last-child { margin:0 }
 dd { margin: 0 0 0 2em; }
 
