Small tweak to API docs.

--- a/app/views/api/v1/apis/show.html.erb
+++ b/app/views/api/v1/apis/show.html.erb
@@ -62,8 +62,7 @@ doc = <<-MARKDOWN
  * __.../api/v1/translator?{options}__ # returns metadata from the mdTranslator according to options specified
    - accepts requests with options encoded as key-value pairs in the query string.
    - only recommended for use when JSONp is required, i.e. for clients without CORS support.
-
-
+   - **Note**: subject to URI size limits
 
 ### Options
 > __file__ (string) *required*
