- improved comments to translator_controller  - move GET ahead of POST in ap1/v1 API reference  - added iso19110 writer options JSON object  - added iso19110 option to writers on demo page  - removed alternate path for v1/codelist  - edited adiwgJson to mdJson in readmes

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,13 +46,13 @@ Ocean Observing Systems (AOOS), Nuna Technologies, and the National Climate Chan
 Science Centers (NCCWSC - USGS).  These organizations developed an extensible metadata toolkit
 in three parts:
 
- * __adiwgJson__ - a simple JSON format for scientific metadata that fully supports ISO 19115-2
+ * __mdJson__ - a simple JSON format for scientific metadata that fully supports ISO 19115-2, ISO 19110,
  and FGDC metadata standards.
- * __mdTranslator__ - a public hosted web service for translation of adiwgJson to other metadata
+ * __mdTranslator__ - a public hosted web service for translation of mdJson to other metadata
  standards.  The mdTranslator is also available as a Ruby Gem 'adiwg-mdtranslator' or source
  code from the GitHub repository.
  * __mdEditor__ - an online metadata editor for preparation and maintenance of scientific
- metadata in the adiwgJson format.
+ metadata in the mdJson format.
 
 MARKDOWN
 %>
