--- a/app/views/api/v1/apis/show.html.erb
+++ b/app/views/api/v1/apis/show.html.erb
@@ -33,10 +33,10 @@ doc = <<-MARKDOWN
  * __.../api/codelists__ # returns a JSON or XML object will all codeLists supported in mdJSON <br>
    - use option format="xml" to return an ISO Codelist Catalogue
    - use option format="json" to return a JSON object with codeLists for for loading mdEditors
-   - add option namesOnly="true" to return a JSON object with only codeNames with the codeLists
+   - add option definitions="true" to return a JSON object with codeNames and their definitions
    - add option callback="{callbackName}" with format="json" for JSONp
  * __.../api/codelists/{codeListName}__ # returns a JSON object with the requested codeList
-   - add option namesOnly="true" to return a JSON object with codeNames with the codeList
+   - add option definitions="true" to return a JSON object with codeNames and their definitions
    - use option callback="{callbackName}" for JSONp
 
 ---
