--- a/app/views/api/v1/demos/show.html.erb
+++ b/app/views/api/v1/demos/show.html.erb
@@ -41,6 +41,7 @@
 				<div>
 					<select class="element select medium" id="element_3" name="writer">
 						<option value="iso19115_2" selected="selected">iso19115_2</option>
+						<option value="iso19110">iso19110</option>
 						<option value="">-none-</option>
 					</select>
 				</div>
