- update reader and writer pages  - pin json-schema gem between version 2.4 and 2.5

--- a/app/views/api/readers/index.html.erb
+++ b/app/views/api/readers/index.html.erb
@@ -18,7 +18,7 @@
 
 ## List of available readers for mdTranslator
 
- [adiwgJson](./readers/adiwgJson)
+ [mdJson](./readers/mdJson)
 
  : Alaska Data Integration working group JSON metadata format
 
