--- a/app/views/api/writers/index.html.erb
+++ b/app/views/api/writers/index.html.erb
@@ -22,6 +22,10 @@
 
  : International Standards Organization Geographic Information - Metadata 19115-2:2009
 
+ [iso19110](./writers/iso19110)
+
+ : International Standards Organization Geographic Information - Feature Catalogue 19110:2005
+
 MARKDOWN
 %>
 <%= Kramdown::Document.new(doc).to_html.html_safe %>
