--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,7 +47,8 @@ Science Centers (NCCWSC - USGS).  These organizations developed an extensible me
 in three parts:
 
  * __mdJson__ - a simple JSON format for scientific metadata that fully supports ISO 19115-2, ISO 19110,
- and FGDC metadata standards.
+ and FGDC metadata standards.  The mdJson schema can be viewed on the interactive
+ [mdJson Schema Viewer](http://www.adiwg.org/mdJson-schema-viewer/prod/).
  * __mdTranslator__ - a public hosted web service for translation of mdJson to other metadata
  standards.  The mdTranslator is also available as a Ruby Gem 'adiwg-mdtranslator' or source
  code from the GitHub repository.
