Change adiwgJson references to mdJson
Updated example to mdJson v0.9.4

--- a/app/views/api/v1/demos/show.html.erb
+++ b/app/views/api/v1/demos/show.html.erb
@@ -28,7 +28,7 @@
 				<label class="description" for="element_2">Reader</label>
 				<div>
 					<select class="element select medium" id="element_2" name="reader">
-						<option value="adiwgJson" selected="selected">adiwgJson</option>
+						<option value="mdJson" selected="selected">mdJson</option>
 					</select>
 				</div>
 				<p class="guidelines" id="guide_2">
