- changed call ADIWG::Mdtranslate.translate() to keyword parameter list.  - added link to demo on welcome page.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,6 +28,7 @@ receives output in one of the mdTranslator's supported 'writer' formats.
  * List of mdTranslator's supported [readers](./api/readers)
  * List of mdTranslator's supported [writers](./api/writers)
  * Documentation of the mdTranslator's version 1 [API](./api/v1)
+ * Hosted [demo](./api/v1/demo) of mdTranslator and options
  * [Home page](http://www.adiwg.org/mdTranslator/) for the mdTranslator project
  * GitHub [repositories](https://github.com/adiwg)  for the mdTranslator project
 
