Use v1.0 of ADIwg gems

--- a/app/views/api/v1/demos/show.html.erb
+++ b/app/views/api/v1/demos/show.html.erb
@@ -19,7 +19,7 @@
 		<div class="form_description">
 			<h2>Submit JSON</h2>
 			<p>
-				Paste or type JSON and click Submit. Valid ISO 19115-2 XML should be generated. For more info visit the
+				Paste or type JSON, choose options, and click Submit. Valid ISO 19139 XML should be generated. For more info visit the
 				<a href="http://www.adiwg.org/mdTranslator">mdTranslator website</a>.
 			</p>
 		</div>
