--- a/app/views/api/writers/index.html.erb
+++ b/app/views/api/writers/index.html.erb
@@ -26,6 +26,10 @@
 
  : International Standards Organization Geographic Information - Feature Catalogue 19110:2005
 
+  [html](./writers/html)
+
+ : HTML 'human-readable' and printable report of the metadata content
+
 MARKDOWN
 %>
 <%= Kramdown::Document.new(doc).to_html.html_safe %>
