- small edits to welcome page and API text

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,7 @@
 
 # History:
 # 	Stan Smith 2014-10-09 initial
+#   Stan Smith 2015-04-15 edits to text and links
 -->
 
 <h2 id="mainHeader">
@@ -31,9 +32,12 @@ receives output in one of the mdTranslator's supported 'writer' formats.
  * Hosted [demo](./api/v1/demo) of mdTranslator and options
  * Other Links ...
    - [Home page](http://www.adiwg.org/mdTranslator/) for the mdTranslator project
-   - GitHub [repositories](https://github.com/adiwg)  for the mdTranslator project
-   - Online interactive [schema viewer](http://www.adiwg.org/mdTools/#viewer-page) for documenting
-   the mdJson schema
+   - Online [mdTool](http://www.adiwg.org/mdTools/) for viewing
+    mdJson documentation, validating mdJson, submitting mdJson to mdTranslator, and
+    displaying responses from mdTranslator
+   - GitHub [repositories](https://github.com/adiwg) for the mdTranslator project
+   - [RubyGems](https://rubygems.org/search?utf8=%E2%9C%93&query=adiwg) for RubyGem
+    libraries for adiwg-mdtranslator, adiwg-mdcodes, and adiwg-json_schemas
 
 ## Background
 
