--- a/app/views/api/v1/demos/show.html.erb
+++ b/app/views/api/v1/demos/show.html.erb
@@ -29,6 +29,7 @@
 				<div>
 					<select class="element select medium" id="element_2" name="reader">
 						<option value="mdJson" selected="selected">mdJson</option>
+						<option value="sbJson">sbJson</option>
 					</select>
 				</div>
 				<p class="guidelines" id="guide_2">
@@ -43,6 +44,8 @@
 						<option value="iso19115_2" selected="selected">iso19115_2</option>
 						<option value="iso19110">iso19110</option>
 						<option value="html">HTML</option>
+						<option value="mdJson">mdJson</option>
+						<option value="sbJson">sbJson</option>
 						<option value="">-none-</option>
 					</select>
 				</div>
@@ -122,4 +125,3 @@
 	<% end %>
 
 </div>
-
