--- a/app/views/api/writers/index.html.erb
+++ b/app/views/api/writers/index.html.erb
@@ -30,6 +30,10 @@
 
  : HTML 'human-readable' and printable report of the metadata content
 
+  [mdJson](./writers/mdJson)
+
+ : Alaska Data Integration working group (ADIwg) format for editing metadata in ADIwg's mdEditor
+
 MARKDOWN
 %>
 <%= Kramdown::Document.new(doc).to_html.html_safe %>
