Add sbJson to available writer options

--- a/app/views/api/writers/index.html.erb
+++ b/app/views/api/writers/index.html.erb
@@ -30,6 +30,10 @@
 
  : HTML 'human-readable' and printable report of the metadata content
 
+  [sbJson](./writers/sbJson)
+
+ : U.S. Geological Survey's standard for documenting records ingested into ScienceBase Catalog
+
   [mdJson](./writers/mdJson)
 
  : Alaska Data Integration working group (ADIwg) format for editing metadata in ADIwg's mdEditor
