--- a/app/views/api/v2/demos/show.html.erb
+++ b/app/views/api/v2/demos/show.html.erb
@@ -41,7 +41,8 @@
 					<select class="element select medium" id="element_3" name="writer">
 						<option value="iso19115_2" selected="selected">iso19115_2</option>
 						<option value="iso19110">iso19110</option>
-						<option value="html">HTML</option>
+                  <option value="html">HTML</option>
+                  <option value="sbJson">sbJSON</option>
 						<option value="mdJson">mdJson</option>
 						<option value="">-none-</option>
 					</select>
