Add sbJson to available reader options

--- a/app/views/api/readers/index.html.erb
+++ b/app/views/api/readers/index.html.erb
@@ -22,6 +22,10 @@
 
  : Alaska Data Integration working group JSON metadata format
 
+ [mdJson](./readers/sbJson)
+
+ : U.S. Geological Survey *ScienceBase* JSON metadata format
+
 MARKDOWN
 %>
 <%= Kramdown::Document.new(doc).to_html.html_safe %>
