Commit with problem

--- a/app/views/api/readers/index.html.erb
+++ b/app/views/api/readers/index.html.erb
@@ -22,7 +22,7 @@
 
  : Alaska Data Integration working group JSON metadata format
 
- [mdJson](./readers/sbJson)
+ [sbJson](./readers/sbJson)
 
  : U.S. Geological Survey *ScienceBase* JSON metadata format
 
