--- a/app/views/api/v2/demos/show.html.erb
+++ b/app/views/api/v2/demos/show.html.erb
@@ -4,7 +4,8 @@
 # REST endpoint controller for description of api
 
 # History:
-#  Stan Smith 2017-05-19 Refactored v1 demo for v2
+#  Stan Smith 2017-05-19 refactored v1 demo for v2
+#  Stan Smith 2017-06-30 add buttons to insert mdJson or sbJson into JSON textarea
 -->
 <script type="text/javascript">
    function insertText(exampleCode) {
